<resources>
    <string name="app_name">iCare</string>
    <string name="new_profile_activity">New Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profileName">Profile Name</string>
    <string name="userName">Name</string>
    <string name="bg">Blood Group</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="dob">Date of Birth</string>
    <string name="contactNo">Contact No</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="newProfile">Profile</string>
    <string name="gender">Gender</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="dietInformation">Diet Information</string>
    <string name="vaccinationInformation">Vaccination Information</string>
    <string name="generalInformation">General Information</string>
    <string name="doctorManagement">Doctor Management</string>
    <string name="medicalHistory">Medical History</string>
    <string name="growthInformation">Growth Information</string>
    <string name="edit">Edit</string>
    <string name="remove">Delete</string>
    <string name="notFound">No Data Found</string>
    <string-array name="bloodGroupList">
        <item>A+ve</item>
        <item>B+ve</item>
        <item>AB+ve</item>
        <item>O+ve</item>
        <item>A-ve</item>
        <item>B-ve</item>
        <item>AB-ve</item>
        <item>O-ve</item>
    </string-array>
    <string-array name="navList">
        <item>General Information</item>
        <item>Diet Information</item>
        <item>Vaccination Information</item>
        <item>Doctor Management</item>
        <item>Growth Information</item>
        <item>Medical History</item>
        <item>Remove Profile</item>
    </string-array>
    <integer-array name="iconList">
        <item>@drawable/general_information_icon</item>
        <item>@drawable/diet_informationicon</item>
        <item>@drawable/vaccination_icon</item>
        <item>@drawable/doctor_icon</item>
        <item>@drawable/human_growth_icon</item>
        <item>@drawable/medical_history_icon</item>
        <item>@drawable/remove_profile</item>
    </integer-array>
    <string name="title_activity_profile_detail">ProfileDetailActivity</string>
</resources>
