<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EBF4FA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EBF4FA"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <RelativeLayout
                    android:id="@+id/dietInformation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_button_background_drawable"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/dietImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/diet_informationicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/dietImageView"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="8dp"
                        android:text="@string/dietInformation"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="#000000" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/vaccinationInformation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_button_background_drawable"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/vaccinationImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/vaccination_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vaccinationImageView"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="8dp"
                        android:text="@string/vaccinationInformation"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="#000000" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <RelativeLayout
                    android:id="@+id/generalInformation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_button_background_drawable"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/generalImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/general_information_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/generalImageView"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="8dp"
                        android:text="@string/generalInformation"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="#000000" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/doctorInformation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_button_background_drawable"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/doctorImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/doctor_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/doctorImageView"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="8dp"
                        android:text="@string/doctorManagement"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="#000000" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <RelativeLayout
                    android:id="@+id/growthInformation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_button_background_drawable"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/growthImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/human_growth_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/growthImageView"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="8dp"
                        android:text="@string/growthInformation"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="#000000" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/healthHistory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_button_background_drawable"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/historyImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/medical_history_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/historyImageView"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="8dp"
                        android:text="@string/medicalHistory"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="#000000" />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>